tests/expectations/compiler/function/variable_shadow_function_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372006]: function `f1` shadowed by
    --> compiler-test:9:13
     |
   9 |         let f1: u8 = 1u8;
     |             ^^
Error [ETYC0372005]: Unknown variable `f1`
    --> compiler-test:10:16
     |
  10 |         return f1;
     |                ^^
"""]
